--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
     </head>
 
     <body>
+        <header>
+        </header>
+        <section>
+        </section>
+        <section>
+        </section>
+        <footer>
+        </footer>
     </body>
  </html>
