5: se agrega el titulo en header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <body>
         <header>
+            <h1>Componentes De Una Computadora</h1>
         </header>
         <section>
         </section>
