--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <body>
         <header>
             <h1>Componentes De Una Computadora</h1>
+            <nav>
+                <ul>
+                    <li>Inicio</li>
+                    <li>Componentes</li>
+                    <li>Contacto</li>
+                </ul>
+            </nav>
         </header>
         <section>
         </section>
