--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </nav>
         </header>
         <section>
+            <h2>Inicio:</h2>
         </section>
         <section>
         </section>
