9: se agregó la información contenido de la página

--- a/index.html
+++ b/index.html
@@ -21,9 +21,24 @@
             <h2>Inicio:</h2>
             <p>Un computador, computadora u ordenador es una máquina digital programable, de funcionamiento electrónico, capaz de procesar grandes cantidades de datos a altas velocidades. La información así obtenida puede luego presentarse a un operador humano, o transmitirse a otros sistemas mediante redes informáticas. En esta página encontrarás información sobre los componentes de una computadora:</p>
         </section>
+        <h2>Componentes:</h2>
+        <article>
+            <h3>Procesador (CPU):</h3>
+            <p>El CPU es el cerebro de la computadora. Ejecuta instrucciones y realiza cálculos.</p>
+        </article>
+        <article>
+            <h3>Memoria RAM:</h3>
+            <p>La RAM almacena datos temporalmente para acceso rápido del CPU.</p>
+        </article>
+        <article>
+            <h3>Disco Duro (HDD/SSD):</h3>
+            <p>El disco duro almacena datos de forma permanente.</p>
+        </article>
         <section>
         </section>
         <footer>
+            <p>información sobre componentes de la computadora.</p>
+            <p>&copy; 2025 Misael G. (contacto: 000128304)</p>
         </footer>
     </body>
  </html>
